# GrpcClipboard

./: Cargo.toml  README.md  build.rs  config.json
proto/: services.proto
src/: client.rs  server.rs
