[package]
name = "GrpcClipboard"
version = "0.1.0"
edition = "2021"

[build]
path = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
prost = "0.11.8"
protoc = "2.28.0"
tokio = {version = "1.27.0", features = ["rt-multi-thread"]}
tonic = "0.9.1"

[build-dependencies]
tonic-build = "0.9.1"
